fix caching for CompressJarTask