@@ -101,13 +101,15 @@ val patchHistory = releaseTags
 	.map { name -> name.substring(minorTagPrefix.length) }
 
 val maxPatch = patchHistory.maxOfOrNull { it.substringBefore('-').toInt() }
-val patch = 
-	maxPatch?.plus(
-		if (patchHistory.contains(maxPatch.toString()))
-			releaseIncrement
-		else
-			0
-	) ?: 0
+val patch = maxPatch.let {
+	if (it != null) {
+		if (patchHistory.contains(it.toString())) {
+			it + releaseIncrement
+		} else {
+			it
+		}
+	} else 0
+}
 var patchAndSuffix = patch.toString()
 
 if (releaseChannel.suffix != null) {
@@ -175,11 +177,6 @@ allprojects {
 	apply(plugin = "maven-publish")
 
 	repositories {
-		mavenCentral {
-			content {
-				excludeGroup("ca.weblite")
-			}
-		}
 		maven("https://repo.spongepowered.org/maven")
 		maven("https://jitpack.io/")
 		exclusiveContent { 
@@ -200,6 +197,7 @@ allprojects {
 				languageVersion = JavaLanguageVersion.of(21)
 			}
 			options.compilerArgs.addAll(arrayOf("-Xplugin:Manifold no-bootstrap", "-Xplugin:jabel"))
+			options.forkOptions.jvmArgs?.add("-XX:+EnableDynamicAgentLoading")
 		}
 	}
 	
@@ -397,7 +395,7 @@ tasks.shadowJar {
 	exclude("LICENSE_zson")
 	
 	configurations = immutableListOf(shade)
-	archiveClassifier = null
+	archiveClassifier = "deobfuscated"
 	isPreserveFileTimestamps = false
 	isReproducibleFileOrder = true
 	
@@ -451,6 +449,9 @@ val compressJar = tasks.register<CompressJarTask>("compressJar") {
 	
 	val shadowJar = tasks.shadowJar.get()
 	inputJar = shadowJar.archiveFile.get().asFile
+	outputJar = shadowJar.archiveFile.get().asFile.let { 
+		it.parentFile.resolve("${it.nameWithoutExtension.removeSuffix("-deobfuscated")}.jar")
+	}
 	
 	deflateAlgorithm = releaseChannel.deflation
 	jsonShrinkingType = releaseChannel.json
